  Added missing t/test22-strevala.t to MANIFEST.
  Renamed t/\d\d.test.t    files to t/\d\d_test.t 
          t/test*.pm.x     files to t/test*.pm_x 
          t/test*fork.\d.* files to t/test*fork-\d.*
          .js and .css     file to only have one period/dot
    for greater portability.  VMS ODS-2 files can only have
    one period/dot.

=head2 Changes in Devel::NYTProf 2.08 (svn r685) 15th Feb 2009

Core:

  Added optimize=0 option to disable the perl optimizer
    so you can see more accurate statement execution counts
    for some kinds of constructs.

  Added savesrc=1 option to copy source code into the profile
    so reports are not affected by changes to the source files.

  Added ability for DB::enable_profile() to specify a new file
    for profile data to be written to.

Reporting:

  Time spent within nested string evals is accounted for.

  Fixed searching @INC for source files for reports.

  Dramatically increased performance of nytprofhtml
    relative to the 2.07 version.

  Many tables in html reports are sortable by clicking on header columns
    (requires JavaScript, uses jQuery and tablesorter.js)

  Statement timings are now shown as integers in appropriate
    units: seconds, milliseconds, microseconds or nanoseconds.

  Hovering over times in subroutine or file summary tables
    now shows the percentage time.

  Added tables showing timings rolled up per package name depth.

  Improved HTML conformance thanks to Leland Johnson.

=head2 Changes in Devel::NYTProf 2.07 (svn r583) 1st Nov 2008

Core:

  NOTE: The file format has changed. Files from 2.04 and 2.05
  can still be read by this version.

  Subroutine inclusive time no longer counts time
    spent recursed into the same subroutine. That time is
    now recorded separately, along with the max recursion depth.

  Added stmts=0 option to disable the statement profiler
    so just the subroutine profiler runs. That reduces the